--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,50 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Dynamic Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#pictures">Pictures</a></li>
+            <li><a href="#politics">Politics</a></li>
+            <li><a href="#family">Family</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section id="about">
+            <h1>About Me</h1>
+            <p>This is a brief introduction about me.</p>
+        </section>
+        <section id="projects">
+            <h1>Projects</h1>
+            <p>Details about my projects.</p>
+        </section>
+        <section id="pictures">
+            <h1>Pictures</h1>
+            <p>Some of my favorite pictures.</p>
+        </section>
+        <section id="politics">
+            <h1>Politics</h1>
+            <p>My views on various political issues.</p>
+        </section>
+        <section id="family">
+            <h1>Family</h1>
+            <p>Information about my family.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 My Dynamic Website</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
