--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#about">About Me</a></li>
+            <li><a href="about.html">About Me</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#pictures">Pictures</a></li>
             <li><a href="#politics">Politics</a></li>
